feat: 完成V4.4加固与企业级IAM逻辑删除